feat(DATA-2023): generate translation mapping files for ANSHAR after validation
* contains translations for lines, quays, stops, vehicle journeys
* translations by object_id or by value